--- a/examples/vite-webpack-rspack/webpack/package.json
+++ b/examples/vite-webpack-rspack/webpack/package.json
@@ -15,6 +15,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.15.8",
+    "@module-federation/enhanced": "^0.6.6",
     "@babel/runtime": "7.25.6",
     "@babel/plugin-transform-runtime": "^7.15.8",
     "@babel/preset-env": "^7.15.8",
